--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,9 @@
 
 
 
+<script defer src="/lib/typeit/typeit.umd.js" integrity=""></script>
+
+
 
 
 
@@ -509,8 +512,24 @@
                         </div>
                         
                     </div>
-                    <section class="prose dark:prose-invert"><p><strong>Welcome!</strong></p>
+                    <section class="prose dark:prose-invert"><h3 id="typeit-6fb22d3943ec7794c447a8e7c1bb77a4"></h3>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+      new TypeIt("#typeit-6fb22d3943ec7794c447a8e7c1bb77a4", {
+        strings: ["","Welcome! ",""],
+        speed:  100 ,
+        lifeLike:  false ,
+        startDelay:  0 ,
+        breakLines:  true ,
+        waitUntilVisible:  true ,
+        loop:  false 
+      }).go();
+    });
+</script>
+<div dir="ltr" class="text-left">
 <p>I&rsquo;m a junior Computer Engineer, passionate about low-level development, digital security and open-source software.</p>
+</div>
 <hr>
 <a
   class="!rounded-md bg-primary-600 px-4 py-2 !text-neutral !no-underline hover:!bg-primary-500 dark:bg-primary-800 dark:hover:!bg-primary-700"
