--- a/public/education/index.html
+++ b/public/education/index.html
@@ -797,7 +797,7 @@
       </div>
       
       <h4 class="mt-0">
-        Russian Middle-school Diploma
+        Middle-school Diploma, Moscow
       </h4>
       
       <p class="text-gray-700 mb-6">
